--- a/css/header.css
+++ b/css/header.css
@@ -16,7 +16,6 @@
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
-  background-color: rgb(11, 206, 21);
   padding: 15px;
   list-style-type: none;
 }
@@ -25,5 +24,5 @@
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   font-size: 1.2rem;
-  color: white;
+  color: rgb(0, 0, 0);
 }
