--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -28,7 +28,7 @@ font-family: Arial, Helvetica, sans-serif;
   display: grid;
   grid-template-columns: 1fr 2fr;
   position: relative;
-  background-color: #f5f5f5;
+  background-color: #b3b3b3;
   padding: 20px;
   border-radius: 5px;
   gap: 10px;
