--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,8 @@
 h1,h2,h3,h4,p {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-ul{
-  list-style: none;
+ul {
+  list-style-type: none;
 }
